jdk 17 support
Former-commit-id: 6f61a702a32032746aa3cd83471f95dab3e35dda