@@ -34,10 +34,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<release>19</release>
-					<compilerArgs>
-			  --enable-preview
-		  </compilerArgs>
+					<release>17</release>
 				</configuration>
 			</plugin>
 		</plugins>
